@@ -135,13 +135,30 @@ base dc=padl,dc=com
 
 # Netscape SDK LDAPS
 #ssl on
+
+# Netscape SDK SSL options
 #sslpath /etc/ssl/certs/cert7.db
 
-# OpenLDAP start_tls
-ssl start_tls
-tls_checkpeer yes
-tls_cacertfile	/etc/ssl/ca.cert
-tls_cacertdir /etc/ssl/certs
-
-# OpenLDAP LDAPS
+# OpenLDAP SSL mechanism
+# start_tls mechanism uses the normal LDAP port, LDAPS typically 636
+#ssl start_tls
 #ssl on
+
+# OpenLDAP SSL options
+# Require and verify server certificate (yes/no)
+# Default is "no"
+#tls_checkpeer yes
+
+# CA certificates for server certificate verification
+# At least one of these are required if tls_checkpeer is "yes"
+#tls_cacertfile /etc/ssl/ca.cert
+#tls_cacertdir /etc/ssl/certs
+
+# SSL cipher suite
+# See man ciphers for syntax
+#tls_ciphers TLSv1
+
+# Client sertificate and key
+# Use these, if your server requires client authentication.
+#tls_cert
+#tls_key
